// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Input Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<styled.div>
  <Text
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    light={false}
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <styled.input
    disabled={false}
    hasError={true}
    name="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    size="jest-auto-snapshots String Fixture"
    type="jest-auto-snapshots String Fixture"
    value="jest-auto-snapshots String Fixture"
  />
  <styled.div>
    <WarningIcon
      size="medium"
    />
    <Styled(Text)
      hasError={true}
      htmlFor="jest-auto-snapshots String Fixture"
      type="help"
    >
      jest-auto-snapshots String Fixture
    </Styled(Text)>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > Input Matches snapshot when boolean prop "hasError" is set to: "false" 1`] = `
<styled.div>
  <Text
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    light={false}
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <styled.input
    disabled={true}
    hasError={false}
    name="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    size="jest-auto-snapshots String Fixture"
    type="jest-auto-snapshots String Fixture"
    value="jest-auto-snapshots String Fixture"
  />
  <styled.div>
    <Styled(Text)
      hasError={false}
      htmlFor="jest-auto-snapshots String Fixture"
      type="help"
    >
      jest-auto-snapshots String Fixture
    </Styled(Text)>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > Input Matches snapshot when passed all props 1`] = `
<styled.div>
  <Text
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    light={false}
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <styled.input
    disabled={true}
    hasError={true}
    name="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    size="jest-auto-snapshots String Fixture"
    type="jest-auto-snapshots String Fixture"
    value="jest-auto-snapshots String Fixture"
  />
  <styled.div>
    <WarningIcon
      size="medium"
    />
    <Styled(Text)
      hasError={true}
      htmlFor="jest-auto-snapshots String Fixture"
      type="help"
    >
      jest-auto-snapshots String Fixture
    </Styled(Text)>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > Input Matches snapshot when passed only required props 1`] = `
<styled.div>
  <styled.input
    disabled={false}
    hasError={false}
    name="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    placeholder=""
    size="regular"
    type="text"
  />
</styled.div>
`;
